cleaning jupyter notebook

--- a/co2_prediction_models.ipynb
+++ b/co2_prediction_models.ipynb
@@ -1,61 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nThis notebook contains a baseline model and other models to predict CO2 emissions.\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "This notebook contains a baseline model and other models to predict CO2 emissions.\n",
-    "\"\"\""
+    "# CO2 Prediction Models"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nMajor TODOs for this project:\\n\\n1. Add capacity factor as a feature\\n2. Rewrite code from first couple of weeks to be more readable. \\n3. Change the notebook into a runnable script\\n4. Continue cleaning data\\n    a. Impute missing values\\n    b. Add India datasets from previous years, but make sure the information is matched correctly\\n        with WRI's data\\n    c. Run models by adding/dropping variables\\n    d. Add Chile's data to the dataset\\n    \\n5. Finishing writing classification library (class_coding will be deleted in place of country.py and others under\\n    classify/)\\n6. One-hot encode categorical variables such as fuel, country, etc\\n\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Major TODOs for this project:\n",
-    "\n",
-    "1. Add capacity factor as a feature\n",
-    "2. Rewrite code from first couple of weeks to be more readable. \n",
-    "3. Change the notebook into a runnable script\n",
-    "4. Continue cleaning data\n",
-    "    a. Impute missing values\n",
-    "    b. Add India datasets from previous years, but make sure the information is matched correctly\n",
-    "        with WRI's data\n",
-    "    c. Run models by adding/dropping variables\n",
-    "    d. Add Chile's data to the dataset\n",
-    "    \n",
-    "5. Finishing writing classification library (class_coding will be deleted in place of country.py and others under\n",
-    "    classify/)\n",
-    "6. One-hot encode categorical variables such as fuel, country, etc\n",
-    "\"\"\""
+    "This notebook contains a baseline model and other models to predict CO2 emissions."
    ]
   },
   {
@@ -85,28 +41,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nReferences\\n\\nChoosing number of neurons and layers\\nhttps://stats.stackexchange.com/questions/181/how-to-choose-the-number-of-hidden-layers-and-nodes-in-a-feedforward-neural-netw\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "References\n",
+    "**References**\n",
     "\n",
     "Choosing number of neurons and layers\n",
-    "https://stats.stackexchange.com/questions/181/how-to-choose-the-number-of-hidden-layers-and-nodes-in-a-feedforward-neural-netw\n",
-    "\"\"\""
+    "https://stats.stackexchange.com/questions/181/how-to-choose-the-number-of-hidden-layers-and-nodes-in-a-feedforward-neural-netw"
    ]
   },
   {
@@ -2906,7 +2847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
